--- a/Tournament/Views/Shared/_Layout.cshtml
+++ b/Tournament/Views/Shared/_Layout.cshtml
@@ -28,11 +28,12 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Schedule", "Index", "Schedules")</li>
                             <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
-                            <li>@Html.ActionLink("Matches", "Index", "Matches", new { RoundId = 1 }, null)</li>
+                            <li>@Html.ActionLink("Matches", "Index", "Matches")</li>
                             <li>@Html.ActionLink("Byes Report","ByesReport", "Matches")</li>
                             
                             @{
-                                if (HttpContext.Current.User.IsInRole("Admin,LeagueAdmin"))
+                                if (HttpContext.Current.User.IsInRole("Admin") ||
+                                    HttpContext.Current.User.IsInRole("LeagueAdmin"))
                                 {
                                     <li>----------------------------</li>
                                     <li>@Html.ActionLink("Clear Schedule", "ClearSchedule", "Matches")</li>
