fixed some errors

--- a/Tournament/Views/Accounts/Login.cshtml
+++ b/Tournament/Views/Accounts/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Log in to Tournament Application</h2>
+<h2>Login for FPLBC Leagues Application</h2>
 
 
 @using (Html.BeginForm()) 
