--- a/Tournament/Views/Home/About.cshtml
+++ b/Tournament/Views/Home/About.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This application is used to track leagues at
+    the Frick Park Lawn Bowling Club.</p>
+
+<p>The FPLBC website is <a href="http://lawnbowlingpittsburgh.org">http://lawnbowlingpittsburgh.org</a></p>
