--- a/Tournament/Views/Home/Contact.cshtml
+++ b/Tournament/Views/Home/Contact.cshtml
@@ -2,16 +2,13 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
+This application is supported by Jeffrey Lederer.
+The source code depository for this application as at <a href="https://github.com/jeffreylederer/Tournament">https://github.com/jeffreylederer/Tournament</a>
+
+<br/><br/>
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:jeffrey@winnlederer.com" target="blank">jeffrey@winnlederer.com</a><br />
 </address>
