--- a/Tournament/Views/Matches/Index.cshtml
+++ b/Tournament/Views/Matches/Index.cshtml
@@ -76,7 +76,7 @@
                     if(id > 0 && (HttpContext.Current.User.IsInRole("Admin") ||
                                     HttpContext.Current.User.IsInRole("LeagueAdmin"))) 
                     {
-                        @Html.ActionImage("MoveUp", new { id = id, weekid = ViewBag.WeekID }, "~/Content/Images/uparrow.png", "Move Up one rink");
+                        @Html.ActionImage("MoveUp", new { id = item.id }, "~/Content/Images/uparrow.png", "Move Up one rink");
                     }
                 }
             </td>
