fixed edit/team calendar widget

--- a/Tournament/Views/Schedules/Edit.cshtml
+++ b/Tournament/Views/Schedules/Edit.cshtml
@@ -56,12 +56,12 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@*@section Scripts {
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
         $(function() { // will trigger when the document is ready
             $('#GameDate').datepicker();
         });
     </script>
-}*@
+}
 
