--- a/Tournament/Views/Leagues/Delete.cshtml
+++ b/Tournament/Views/Leagues/Delete.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Delete</h2>
 
+<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
 <p class="error">@ViewBag.ConcurrencyErrorMessage</p>
 
 <h3>Are you sure you want to delete this?</h3>
@@ -29,7 +30,15 @@
             @Html.DisplayFor(model => model.TeamSize)
         </dd>
 
-       
+        <dt>
+            @Html.DisplayNameFor(model => model.Active)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Active)
+        </dd>
+
+
     </dl>
 
     @using (Html.BeginForm())
@@ -43,4 +52,5 @@
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
+  
 </div>
