--- a/Tournament/Views/Players/Delete.cshtml
+++ b/Tournament/Views/Players/Delete.cshtml
@@ -5,59 +5,21 @@
 }
 
 <h2>Delete</h2>
-<p class="error">@ViewBag.ConcurrencyErrorMessage</p>
-<h3>Are you sure you want to delete this?</h3>
+<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
+<h3>Are you sure you want to delete this player?</h3>
 <div>
-    <h4>@Model.League.LeagueName Player</h4>
+    <h4>@HttpContext.Current.Session["LeagueName"].ToString()</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            @Html.DisplayNameFor(model => model.Membership.FullName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.FirstName)
+            @Html.DisplayFor(model => model.Membership.FullName)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Active)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Active)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.shortname)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.shortname)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NickName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NickName)
-        </dd>
+        
 
     </dl>
 
