--- a/Tournament/Views/Schedules/Delete.cshtml
+++ b/Tournament/Views/Schedules/Delete.cshtml
@@ -5,11 +5,11 @@
 }
 
 <h2>Delete</h2>
+<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
 <p class="error">@ViewBag.ConcurrencyErrorMessage</p>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Tournament Scheduled Round for @Model.League.LeagueName</h4>
+    <h4>Tournament Scheduled Round for @HttpContext.Current.Session["LeagueName"].ToString()</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
