--- a/Tournament/Views/Schedules/Index.cshtml
+++ b/Tournament/Views/Schedules/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>@ViewBag.LeagueName Weeks</h2>
+<h2>@HttpContext.Current.Session["LeagueName"].ToString() Weeks</h2>
 
 <p>
 @{
