--- a/Tournament/Views/Teams/Delete.cshtml
+++ b/Tournament/Views/Teams/Delete.cshtml
@@ -5,10 +5,11 @@
 }
 
 <h2>Delete</h2>
+<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
 <p class="error">@ViewBag.ConcurrencyErrorMessage</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>@ViewBag.LeagueName Team</h4>
+    <h4>@HttpContext.Current.Session["LeagueName"].ToString() Team</h4>
     <span style="color: red;">@ViewBag.Error</span>
     <hr />
     <dl class="dl-horizontal">
@@ -25,7 +26,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Player.FullName)
+            @Html.DisplayFor(model => model.Player.Membership.FullName)
         </dd>
         @{
             if ((int)ViewBag.TeamSize > 2)
@@ -35,7 +36,7 @@
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.Player1.FullName)
+                    @Html.DisplayFor(model => model.Player1.Membership.FullName)
                 </dd>
             }
         }
@@ -47,7 +48,7 @@
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.Player2.FullName)
+                    @Html.DisplayFor(model => model.Player2.Membership.FullName)
                 </dd>
             }
         }
