--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -12,11 +12,10 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>@ViewBag.LeagueName Team</h4>
+    <h4>@HttpContext.Current.Session["LeagueName"].ToString() Team</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
-        @Html.HiddenFor(model => model.Skip)
         @Html.HiddenFor(model => model.Leagueid)
         @Html.HiddenFor(model => model.rowversion)
 
@@ -29,18 +28,22 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Model.Player.FullName
+            <div class="form-group">
+                @Html.LabelFor(model => model.Skip, "Skip", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.Skip, new SelectList(ViewBag.List, "id", "FullName", Model.Skip),"--Select Skip--", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Skip, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+        </div>	
+
         @{
             if ((int)ViewBag.TeamSize > 2)
             {
                 <div class="form-group">
                     @Html.LabelFor(model => model.ViceSkip, "Vice Skip", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("ViceSkip", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.ViceSkip, new SelectList(ViewBag.List, "id", "FullName", Model.ViceSkip), "--Select Vice Skip--", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ViceSkip, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -58,7 +61,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Lead, "Lead", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("Lead", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownListFor(model => model.Lead, new SelectList(ViewBag.List, "id", "FullName", Model.Lead), "--Select Lead--", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Lead, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -114,14 +117,14 @@
             @Html.DisplayFor(modelItem => item.TeamNo)
         </th>
         <td>
-            @Html.DisplayFor(modelItem => item.Player.FullName)
+            @Html.DisplayFor(modelItem => item.Player.Membership.FullName)
         </td>
     
         @if ((int) ViewBag.TeamSize > 2)
         {
 
             <td>
-                @Html.DisplayFor(modelItem => item.Player1.FullName)
+                @Html.DisplayFor(modelItem => item.Player1.Membership.FullName)
             </td>
         }
 
@@ -129,7 +132,7 @@
         {
 
             <td>
-                @Html.DisplayFor(modelItem => item.Player2.FullName)
+                @Html.DisplayFor(modelItem => item.Player2.Membership.FullName)
             </td>
         }
 
@@ -145,3 +148,4 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
