--- a/Tournament/Views/UserLeagues/Create.cshtml
+++ b/Tournament/Views/UserLeagues/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LeagueId, "League Name", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @ViewBag.LeagueName
+                @HttpContext.Current.Session["LeagueName"].ToString()
             </div>
         </div>
 
