--- a/Tournament/Views/UserLeagues/Index.cshtml
+++ b/Tournament/Views/UserLeagues/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Users of @ViewBag.LeagueName</h2>
+<h2>Users of @HttpContext.Current.Session["LeagueName"].ToString()</h2>
 
 <p>
     @Html.ActionLink("Add User", "Create", new {id=ViewBag.LeagueId})
