--- a/Tournament/Views/Users/Delete.cshtml
+++ b/Tournament/Views/Users/Delete.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h2>Delete</h2>
-
+<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
+<p class="error">@ViewBag.ConcurrencyErrorMessage</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>User</h4>
@@ -37,7 +38,8 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
