--- a/Tournament/Views/Schedules/Create.cshtml
+++ b/Tournament/Views/Schedules/Create.cshtml
@@ -29,7 +29,7 @@
         @Html.LabelFor(model => model.GameDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
 
-            @Html.EditorFor(model => model.GameDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextBoxFor(m => m.GameDate, "{0:d}", new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.GameDate, "", new { @class = "text-danger" })
         </div>
     </div>
