created nested layout pages

--- a/Tournament/Views/Matches/ByesReport.cshtml
+++ b/Tournament/Views/Matches/ByesReport.cshtml
@@ -2,13 +2,14 @@
 
 @{
     ViewBag.Title = "ByesReport";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Byes Report</h2>
 <table>
 <tr>
     <td>
-        <a href="/Home/Index">Back to Home Page</a>
+        <a href="/Home/Welcome">Back to Home Page</a>
 </tr>
 <tr>
     <td>
