--- a/Tournament/Views/Matches/CreateMatches.cshtml
+++ b/Tournament/Views/Matches/CreateMatches.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "CreateMatches";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Create Matches for Tournament</h2>
