--- a/Tournament/Views/Leagues/Delete.cshtml
+++ b/Tournament/Views/Leagues/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
+<div class="validation-summary-errors text-danger">@ViewBag.Error</div>
 
 <h3>Are you sure you want to delete this?</h3>
 Deleting a leagues will:
