--- a/Tournament/Views/Matches/Create.cshtml
+++ b/Tournament/Views/Matches/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Create</h2>
@@ -59,6 +60,4 @@
     @Html.ActionLink("Back to List", "Index", new { RoundId = ViewBag.RoundId })
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
