--- a/Tournament/Views/Membership/Edit.cshtml
+++ b/Tournament/Views/Membership/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Edit</h2>
@@ -80,6 +81,3 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
