--- a/Tournament/Views/Players/Create.cshtml
+++ b/Tournament/Views/Players/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Add a Player</h2>
@@ -12,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>@HttpContext.Current.Session["LeagueName"].ToString()</h4>
+       
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model=>model.Leagueid)
@@ -39,6 +40,4 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
