--- a/Tournament/Views/Players/Delete.cshtml
+++ b/Tournament/Views/Players/Delete.cshtml
@@ -2,13 +2,14 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Delete</h2>
-<div class="validation-summary-errors text-danger"@ViewBag.Error</div>
+<div class="validation-summary-errors text-danger">@ViewBag.Error</div>
 <h3>Are you sure you want to delete this player?</h3>
 <div>
-    <h4>@HttpContext.Current.Session["LeagueName"].ToString()</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
