--- a/Tournament/Views/Players/Edit.cshtml
+++ b/Tournament/Views/Players/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Edit</h2>
@@ -10,24 +11,24 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>@HttpContext.Current.Session["LeagueName"].ToString() Player</h4>
+        <h4>Player</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
-        @Html.HiddenFor(model=>model.Leagueid)
-        @Html.HiddenFor(model=>model.rowversion)
+        @Html.HiddenFor(model => model.Leagueid)
+        @Html.HiddenFor(model => model.rowversion)
 
         <div class="form-group">
             @Html.LabelFor(model => model.MembershipId, "Player", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.MembershipId, new SelectList(ViewBag.List, "id", "FullName"), "--Select Player--", htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.MembershipId, new SelectList(ViewBag.List, "id", "FullName", Model.MembershipId), htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.MembershipId, "", new { @class = "text-danger" })
             </div>
         </div>
 
-      
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
@@ -36,10 +37,10 @@
     </div>
 }
 
+
+
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
