--- a/Tournament/Views/Schedules/Create.cshtml
+++ b/Tournament/Views/Schedules/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<h2>@HttpContext.Current.Session["LeagueName"].ToString()</h2>
 <h2>Create</h2>
 
 @using (Html.BeginForm())
@@ -11,7 +11,7 @@
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>Tournament Scheduled Round for @HttpContext.Current.Session["LeagueName"].ToString()</h4>
+    <h4>Add Week to league</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Leagueid)
