--- a/Tournament/Views/Schedules/Delete.cshtml
+++ b/Tournament/Views/Schedules/Delete.cshtml
@@ -2,14 +2,15 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
 <h2>Delete</h2>
-<div class="validation-summary-errors text-danger"><ul><li>@ViewBag.Error</li></ul></div>
+<div class="validation-summary-errors text-danger">@ViewBag.Error</div>
 <p class="error">@ViewBag.ConcurrencyErrorMessage</p>
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Tournament Scheduled Round for @HttpContext.Current.Session["LeagueName"].ToString()</h4>
+    <h4>Delete a week from schedule</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
