--- a/Tournament/Views/Schedules/Edit.cshtml
+++ b/Tournament/Views/Schedules/Edit.cshtml
@@ -2,7 +2,10 @@
 
 @{
     ViewBag.Title = "Edit";
+
 }
+
+<h2>@HttpContext.Current.Session["LeagueName"].ToString()</h2>
 
 <h2>Edit</h2>
 
@@ -11,7 +14,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Tournament Scheduled Round for @HttpContext.Current.Session["LeagueName"].ToString()</h4>
+        <h4>Edit Week</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.id)
@@ -29,7 +32,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GameDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.GameDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(m => m.GameDate, "{0:d}", new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.GameDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -59,7 +62,7 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-        $(function() { // will trigger when the document is ready
+        $(function () { // will trigger when the document is ready
             $('#GameDate').datepicker();
         });
     </script>
