--- a/Tournament/Views/Schedules/Index.cshtml
+++ b/Tournament/Views/Schedules/Index.cshtml
@@ -2,9 +2,10 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
-<h2>@HttpContext.Current.Session["LeagueName"].ToString() Weeks</h2>
+<h2>Schedule</h2>
 
 <p>
 @{
