--- a/Tournament/Views/Teams/Edit.cshtml
+++ b/Tournament/Views/Teams/Edit.cshtml
@@ -2,9 +2,10 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_LeagueLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Edit Team</h2>
 
 
 @using (Html.BeginForm())
@@ -145,7 +146,5 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+
 
