--- a/Tournament/Views/Shared/_Layout.cshtml
+++ b/Tournament/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                                 {
                                     <li>----------------------------</li>
                                     <li>@Html.ActionLink("Create Matches", "CreateMatches", "Matches")</li>
+                                    <li>@Html.ActionLink("Delete Matches", "ClearSchedule", "Matches")</li>
                                 }
                             </ul>
                         </li>
